plugins {
	id 'idea'
	id 'java'
	id 'io.ebean' version '12.12.0'
	id 'application'
	id 'checkstyle'
	id 'com.adarshr.test-logger' version '3.0.0'
	id 'com.github.ben-manes.versions' version '0.39.0'
	id 'jacoco'
}

group = 'hexlet.code'
version = '1.0-SNAPSHOT'

compileJava {
	options.release = 16
}

application {
	mainClass = 'hexlet.code.App'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'io.javalin:javalin:4.0.1'
	implementation 'org.slf4j:slf4j-simple:1.7.31'

	implementation 'org.thymeleaf:thymeleaf:3.0.12.RELEASE'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.0.0'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
	implementation 'org.webjars:bootstrap:5.1.1'

	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'
	testCompileOnly 'org.projectlombok:lombok:1.18.20'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'


	implementation 'com.h2database:h2:1.4.200'
	implementation 'org.postgresql:postgresql:42.2.24'

	implementation 'io.ebean:ebean:12.11.5'
	implementation 'io.ebean:ebean-ddl-generator:12.11.5'
	implementation 'io.ebean:ebean-querybean:12.11.5'
	implementation 'io.ebean:ebean-migration:12.11.2'
	implementation 'io.ebean:ebean-annotation:7.3'
	annotationProcessor 'io.ebean:querybean-generator:12.11.5'

	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.5'
	implementation 'javax.activation:activation:1.1.1'

	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
	testImplementation 'org.assertj:assertj-core:3.21.0'

	testImplementation 'io.ebean:ebean-test:12.11.5'
	implementation 'com.konghq:unirest-java:3.13.0'
	implementation 'org.jsoup:jsoup:1.14.3'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.2'
	implementation 'org.jsoup:jsoup:1.14.3'
}

test {
	useJUnitPlatform()
}

testlogger {
	showStandardStreams true
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
	}
}
checkstyle {
	toolVersion '9.0'
}

task generateMigrations(type: JavaExec) {
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'hexlet.code.MigrationGenerator'
}

task stage(dependsOn: ['clean', 'installDist'])
installDist.mustRunAfter clean
